# LIDLbot-Experiment-Platform

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml  run.py
backend/app/: __init__.py
backend/app/core/: browser.py  dialogs.py  exceptions.py  logging.py  paths.py  server.py
backend/app/routes/: __init__.py  session_routes.py
backend/app/services/config/: __init__.py  config_constants.py  config_loader.py  config_manager.py
backend/app/services/config/config_normalizers/: __init__.py  modules_config_normalizer.py  normalization_helpers.py  trials_config_normalizer.py
backend/app/services/config/config_validators/: __init__.py  blocks_config_validator.py  experiment_config_validator.py  modules_config_validator.py  sets_config_validator.py  trials_config_validator.py  validation_helpers.py
backend/app/services/fileio/: __init__.py  read.py  write.py
backend/app/services/session/: __init__.py  session_controller.py
backend/app/services/shuffle/: __init__.py  fisher_yates_shuffle.py  spotify_shuffle.py
frontend/static/css/: chatbot.css  complete.css  content_viewer.css  prompter.css  session_code_display.css  session_code_entry.css  startup.css  voicebot.css  web_content_embed.css
frontend/static/js/: chatbot.js  content_viewer.js  prompter.js  session_code_display.js  session_code_entry.js  startup.js  voicebot.js  web_content_embed.js
frontend/templates/: chatbot.html  complete.html  content_viewer.html  prompter.html  session_code_display.html  session_code_entry.html  voicebot.html  web_content_embed.html
(+8 files in other folders)
